--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-This is your new Play 2.1 application
-=====================================
-
-This file will be packaged with your application, when using `play dist`.
+used PLAY 2.1.3 for this Buy and sell web application
